virtual-portfolio/deployments/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: production-ingress-nginx
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - kytra.app
    secretName: kytra-tls
  rules:
  - host: kytra.app
    http:
      paths:
      - backend:
          serviceName: landing
          servicePort: 80
  - host: api.kytra.app
    http:
      paths:
      - backend:
          serviceName: micro-api
          servicePort: 80
  - host: beta.kytra.app
    http:
      paths:
      - backend:
          serviceName: frontend
          servicePort: 80
  - host: beta-api.kytra.app
    http:
      paths:
      - backend:
          serviceName: micro-api
          servicePort: 80
  - host: blog.getkite.app
    http:
      paths:
      - backend:
          serviceName: blog
          servicePort: 80
